# data_sanitizer_poo

./: .env.example  .gitignore  LICENSE  Makefile  Makefile.backup.inc  README.md  pyproject.toml  requirements.lock.txt  requirements.lock.txt.bak  requirements.txt.bak
.github/workflows/: ci.yml
Temp/: EOD_Convert_Isin_Tickers.py  FIGI_Convert_Isin_Tickers.py  check_create_filtered_dataset.py  check_indicateurs_structure.py  corriger_formats.py  detecter_anomalies.py  full_baseline_backup.sh  init_data_sanitizer.py  inspect_dataframe.py  rebuild_equities.py  rebuild_equities_truncate_then_import.py  telecharger_cours.py  telecharger_instruments.py  telecharger_manquant.py  test_equities_prices.py  verifier_colonnes.py  verify_reinsertion_after_manual_deletes.py
data_sanitizer/: __init__.py  config.py
data_sanitizer/adapters/db/: common.py  equities_repo_pg.py  prices_repo_pg.py
data_sanitizer/adapters/providers/: euronext.py  ticker_resolver_default.py  yfinance_client.py
data_sanitizer/cli/: __init__.py  __main__.py
data_sanitizer/domain/: models.py
data_sanitizer/ports/: equities_repo.py  market_data.py  prices_repo.py  ticker_resolver.py
data_sanitizer/services/: update_prices.py
datas/: equities.csv  equities_schemas.sql
docs/: CHANGELOG.md  Data Sanitizer Poo — Notice D’utilisation.docx  PREPARATION_POO_DATA_SANITIZER.md  PyPI recovery codes  README_import_equities.md  README_update_prices_from_yfinance.md  README_validate_prices_layer2.md  ROADMAP_CLOTURE_2025-08-15.md  TODO.md
scripts/: config.py  import_equities.py  update_prices_from_yfinance.py  update_prices_from_yfinance_refactored.py  update_prices_from_yfinance_refined.py  validate_equities.py  validate_prices_layer2.py
sql/tests/: smoke_tests.sql
sql/triggers/: enforce_canonical_symbol.sql
sql/views/: v_prices_compat.sql
tests/legacy/: test_corriger_formats.py  test_detecter_anomalies.py  test_detecter_temp_test.py  test_verifier_colonnes.py
tests/sql/: init_temp_test.sql
tests/unit/: test_cli_help.py  test_package_import.py
utils/: db.py  log_anomalies.py  setup_env.sh
