[project]
name = "data-sanitizer"
version = "3.0.1"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE*"]
readme = "README.md"
authors = [{ name = "NORODINE Michel", email = "michel.dncompany@gmail.com" }]

dependencies = [
  "pandas>=2.2,<3",
  "typer>=0.12,<0.17",
  "python-dotenv>=1,<2",
  "psycopg[binary]>=3.2,<4",
  "yfinance>=0.2.52,<0.3",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  "build>=1,<2",
  "twine>=5,<6",
  "types-requests>=2.32.0.20241016",
]

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["data_sanitizer"]

[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

[project.scripts]
data-sanitizer = "data_sanitizer.cli:app"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
data_sanitizer = ["py.typed"]

[tool.setuptools.packages.find]
include = ["data_sanitizer*"]

